syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "MovieSystem.V1";

package moviesystem.v1;

service Movies {
  rpc CreateMovie (CreateMovieRequest) returns (Movie);

  rpc UpdateMovie (UpdateMovieRequest) returns (Movie);

  rpc DeleteMovie (DeleteMovieRequest) returns (google.protobuf.Empty);

  rpc ListMovies (ListMoviesRequest) returns (ListMoviesResponse);
  rpc ListExtendedMovies (ListMoviesRequest) returns (ListExtendedMoviesResponse);

  rpc GetMovie (GetMovieRequest) returns (Movie);
  rpc GetMovieExtended (GetMovieExtendedRequest) returns (MovieExtended);
}

message CreateMovieRequest {
  string title = 1;
  int32 number_in_stock = 2;
  int32 rating = 3;
  int32 genre_id = 4;
  int32 daily_rental_rate = 5;
  string imdb_url = 6;
}

message UpdateMovieRequest {
  int32 id = 1;
  string title = 2;
  int32 number_in_stock = 3;
  int32 rating = 4;
  int32 genre_id = 5;
  int32 daily_rental_rate = 6;
  string imdb_url = 7;
}

message DeleteMovieRequest {
  int32 id = 1;
}

//Gets
message Genre {
  int32 id = 1;
  string name = 2;
}

message Movie {
  int32 id = 1;
  string title = 2;
  int32 number_in_stock = 3;
  int32 daily_rental_rate = 4;
  int32 rating = 5;
  Genre genre = 6;
}

message MovieExtended {
  int32 id = 1;
  string title = 2;
  google.protobuf.Timestamp updated_date = 3;
  google.protobuf.Int32Value rating = 4;
  google.protobuf.StringValue reason = 5;
  int32 number_in_stock = 6;
  int32 daily_rental_rate = 7;
  Genre genre = 8;
}

message ListMoviesRequest {
  google.protobuf.Int32Value user_id = 1;
}

message ListMoviesResponse {
  repeated Movie movies = 1;
}

message ListExtendedMoviesResponse {
  repeated MovieExtended movies = 1;
}

message GetMovieRequest {
  google.protobuf.StringValue name = 1;
  int32 id = 2;
}

message GetMovieExtendedRequest {
  int32 user_id = 1;
  int32 id = 2;
}
